# OpenGLSampleCode

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Light.frag  main.cpp  stb_image.h
Renderer/: shader.cpp  shader.h
src/: texture.cpp  trangle.cpp  transform.cpp
